--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title :  "CSE 599G1: Deep Reinforcement Learning"
+title :  "CSE 599G: Deep Reinforcement Learning"
 tagline:
 author :
-  name : cse599g1
+  name : cse599g
 
 
 
