--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ markdown: kramdown
 title :  "CSE 599G1: Deep Reinforcement Learning"
 tagline:
 author :
-  name : cse599g
+  name : cse599g1
 
 
 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : courses.cs.washington.edu/courses/cse599g1/18sp/
+production_url : uwdeeprlcourse.github.io
 
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
